--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,12 +9,14 @@
     },
     "python.defaultInterpreterPath": "./.venv/bin/python",
     "python.terminal.activateEnvironment": true,
-    
+    "pylint.args": [
+        "--disable=W1203,W0718,C0114,C0115,C0116",
+        "--max-line-length=120"
+    ],
     "editor.rulers": [100],
     "editor.tabSize": 4,
     "editor.insertSpaces": true,
     "editor.trimAutoWhitespace": true,
-    
     "files.exclude": {
         "**/__pycache__": true,
         "**/.mypy_cache": true,
@@ -23,7 +25,6 @@
         "**/.pdm-build": true,
         ".venv": true
     },
-    
     "search.exclude": {
         "**/__pycache__": true,
         "**/.mypy_cache": true,
@@ -33,7 +34,6 @@
         ".venv": true,
         "pdm.lock": true
     },
-    
     "terminal.integrated.env.osx": {
         "PDM_IGNORE_SAVED_PYTHON": "1"
     },
