--- a/services/batch_service/pyproject.toml
+++ b/services/batch_service/pyproject.toml
@@ -13,7 +13,9 @@ dependencies = [
     "aiokafka>=0.10.0", 
     "aiohttp>=3.9.0",
     "huleedu-common-core",
-    "huleedu-service-libs"
+    "huleedu-service-libs",
+    "pydantic",
+    "pydantic-settings",
 ]
 
 [build-system]
