--- a/services/libs/pyproject.toml
+++ b/services/libs/pyproject.toml
@@ -9,6 +9,7 @@ requires-python = ">=3.11"
 dependencies = [
     "aiokafka>=0.10.0",
     "pydantic>=2.0",
+    "python-json-logger>=2.0.0",
     "huleedu-common-core",
 ]
 
