Enhance Docker Compose configuration by adding a one-shot service for Kafka topic setup, ensuring topics are created before other services start. Updated Kafka listener configurations to support external connections and added health checks for service dependencies. Modified `pdm.lock` and `pyproject.toml` for dependency management improvements, including the addition of new libraries. Cleaned up verbose rules for better clarity and compliance across multiple rule files, ensuring adherence to updated practices.

--- a/common_core/pyproject.toml
+++ b/common_core/pyproject.toml
@@ -7,8 +7,8 @@ authors = [
 ]
 requires-python = ">=3.11"
 dependencies = [
-    "pydantic[email]>=2.0",
-    "typing-extensions>=4.0.0"
+    "pydantic[email]",
+    "typing-extensions",
 ]
 
 [build-system]
