--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 networks:
   huleedu_internal_network:
     driver: bridge
@@ -27,16 +25,51 @@ services:
       - huleedu_internal_network
     ports:
       - "9092:9092"
+      - "9093:9093"
     environment:
       - KAFKA_CFG_ZOOKEEPER_CONNECT=zookeeper:2181
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://0.0.0.0:9092 
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://0.0.0.0:9092,EXTERNAL://0.0.0.0:9093
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092,EXTERNAL://localhost:9093
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
       - ALLOW_PLAINTEXT_LISTENER=yes
       - KAFKA_CFG_AUTO_CREATE_TOPICS_ENABLE=true
       - KAFKA_BROKER_ID=1
       - KAFKA_CFG_OFFSETS_TOPIC_REPLICATION_FACTOR=1
       - KAFKA_CFG_TRANSACTION_STATE_LOG_REPLICATION_FACTOR=1
       - KAFKA_CFG_TRANSACTION_STATE_LOG_MIN_ISR=1
+    healthcheck:
+      test: ["CMD-SHELL", "kafka-topics.sh --bootstrap-server localhost:9092 --list"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+      start_period: 30s
+
+  kafka_topic_setup:
+    build:
+      context: .
+      dockerfile_inline: |
+        FROM python:3.11-slim
+        WORKDIR /app
+        COPY common_core/pyproject.toml common_core/pdm.lock* ./common_core/
+        COPY common_core/src ./common_core/src/
+        COPY scripts/kafka_topic_bootstrap.py ./scripts/
+        RUN pip install --no-cache-dir aiokafka>=0.10.0 && \
+            pip install -e ./common_core/
+        CMD ["python", "scripts/kafka_topic_bootstrap.py"]
+    container_name: huleedu_kafka_topic_setup
+    restart: "no"
+    depends_on:
+      kafka:
+        condition: service_healthy
+    networks:
+      - huleedu_internal_network
+    environment:
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - KAFKA_CONNECT_MAX_RETRIES=10
+      - KAFKA_CONNECT_RETRY_DELAY=2.0
+      - KAFKA_DEFAULT_PARTITIONS=3
+      - KAFKA_DEFAULT_REPLICATION_FACTOR=1
 
   content_service:
     build:
@@ -44,6 +77,9 @@ services:
       dockerfile: services/content_service/Dockerfile
     container_name: huleedu_content_service
     restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
     networks:
       - huleedu_internal_network
     ports:
@@ -63,8 +99,10 @@ services:
     container_name: huleedu_spell_checker_service
     restart: unless-stopped
     depends_on:
-      - kafka
-      - content_service
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      content_service:
+        condition: service_started
     networks:
       - huleedu_internal_network
     environment:
@@ -80,8 +118,10 @@ services:
     container_name: huleedu_batch_service
     restart: unless-stopped
     depends_on:
-      - kafka
-      - content_service
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      content_service:
+        condition: service_started
     networks:
       - huleedu_internal_network
     ports:
