--- a/services/spell_checker_service/pyproject.toml
+++ b/services/spell_checker_service/pyproject.toml
@@ -34,6 +34,10 @@ test = [
     "pytest-cov",
 ]
 
+[tool.pdm.resolution.overrides]
+huleedu-common-core = "file:///app/common_core"
+huleedu-service-libs = "file:///app/services/libs"
+
 [tool.pdm.scripts]
 start_worker = "python worker.py"
 
