WoofWoof Update dependencies in pdm.lock and pyproject.toml to include new libraries such as prometheus-client, dishka, and quart-dishka. Implement dependency injection for Batch and Spell Checker services using Dishka, enhancing service architecture and type safety. Introduce new DI configurations and ensure all services adhere to updated coding standards and architectural guidelines. All tests pass successfully, confirming the integrity of the changes.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -139,7 +139,9 @@ disallow_untyped_defs = true
 [[tool.mypy.overrides]]
 module = [
     "aiokafka.*",
-    "aiofiles.*"
+    "aiofiles.*",
+    "dishka.*",
+    "quart_dishka.*",
 ]
 ignore_missing_imports = true
 # Note: These external libraries lack official type stubs on PyPI
@@ -147,7 +149,11 @@ ignore_missing_imports = true
 
 # Service-local config modules
 [[tool.mypy.overrides]]
-module = "config"
+module = [
+    "config",
+    "di",
+    "protocols",
+]
 ignore_missing_imports = true
 
 # Existing code (less strict initially)
