WoofWoof Revise AGENTS.md and CLAUDE.md to streamline AI agent directives, emphasizing strict adherence to DDD/EDA principles and mandatory rule compliance. Update project context and success criteria to reflect current development phase and architectural standards. Introduce new correction log files for spell checker service, enhancing documentation of correction processes. Ensure all changes align with evolving microservices architecture and confirm that all tests pass successfully.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ monorepo-tools = [
     "ruff",
     "mypy",
     "pytest",
+    "pytest-mock",
     "pytest-cov",
     "pytest-asyncio",
     "pytest-xdist",
