WoofWoof Update docker-compose.yml to rename HTTP_PORT environment variable to ESSAY_LIFECYCLE_SERVICE_HTTP_PORT for clarity. Additionally, introduce a new Dockerfile for the Essay Lifecycle Service, ensuring compliance with containerization standards. Refactor import statements across services to utilize absolute imports, enhancing compatibility within containerized environments. Confirm all changes adhere to project standards and pass all tests successfully.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -155,5 +155,5 @@ services:
       - ENV_TYPE=docker
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
-      - HTTP_PORT=6000
+      - ESSAY_LIFECYCLE_SERVICE_HTTP_PORT=6000
       - LOG_LEVEL=INFO 
