Update pdm.lock and pyproject.toml to include new dependencies for the monorepo-tools group, specifically adding `anyio`, `certifi`, `httpcore`, `httpx`, and `sniffio`. Additionally, refine mypy configuration to include `httpx.*` and `spell_logic.*` for improved type checking. Ensure all changes are consistent with project standards and confirm that all tests pass successfully.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,7 @@ monorepo-tools = [
     "pytest-cov",
     "pytest-asyncio",
     "pytest-xdist",
+    "httpx",
     "pre-commit",
 ]
 
@@ -143,12 +144,24 @@ module = [
     "aiofiles.*",
     "dishka.*",
     "quart_dishka.*",
+    "httpx.*",
+    "spell_logic.*",
 ]
 ignore_missing_imports = true
 
-# Service-local config modules
+# Service-local config modules and API modules
 [[tool.mypy.overrides]]
-module = ["config", "worker_main", "core_logic", "event_router", "protocols", "di", "state_store", "batch_command_handlers"]
+module = [
+    "config", 
+    "worker_main", 
+    "core_logic", 
+    "event_router", 
+    "protocols", 
+    "di", 
+    "state_store", 
+    "batch_command_handlers",
+    "api.*",
+]
 ignore_missing_imports = true
 
 [tool.pytest.ini_options]
