--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ networks:
 
 volumes:
   huleedu_content_store_data:
+  essay_lifecycle_data:
 
 services:
   zookeeper:
@@ -125,6 +126,8 @@ services:
         condition: service_completed_successfully
       content_service:
         condition: service_started
+      essay_lifecycle_api:
+        condition: service_started
     networks:
       - huleedu_internal_network
     ports:
@@ -136,12 +139,13 @@ services:
       - PORT=5000
       - LOG_LEVEL=INFO
 
-  essay_lifecycle_service:
+  essay_lifecycle_api:
     build:
       context: .
       dockerfile: services/essay_lifecycle_service/Dockerfile
-    container_name: huleedu_essay_lifecycle_service
+    container_name: huleedu_essay_lifecycle_api
     restart: unless-stopped
+    command: ["pdm", "run", "start"]
     depends_on:
       kafka_topic_setup:
         condition: service_completed_successfully
@@ -151,9 +155,37 @@ services:
       - huleedu_internal_network
     ports:
       - "6001:6000"
+      - "9091:9090"
     environment:
       - ENV_TYPE=docker
       - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
       - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
       - ESSAY_LIFECYCLE_SERVICE_HTTP_PORT=6000
-      - LOG_LEVEL=INFO 
+      - ESSAY_LIFECYCLE_SERVICE_PROMETHEUS_PORT=9090
+      - ESSAY_LIFECYCLE_SERVICE_DATABASE_PATH=/data/essay_lifecycle/essay_lifecycle.db
+      - LOG_LEVEL=INFO
+    volumes:
+      - essay_lifecycle_data:/data/essay_lifecycle
+
+  essay_lifecycle_worker:
+    build:
+      context: .
+      dockerfile: services/essay_lifecycle_service/Dockerfile
+    container_name: huleedu_essay_lifecycle_worker
+    restart: unless-stopped
+    command: ["pdm", "run", "start_worker"]
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      content_service:
+        condition: service_started
+    networks:
+      - huleedu_internal_network
+    environment:
+      - ENV_TYPE=docker
+      - KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - CONTENT_SERVICE_URL=http://content_service:8000/v1/content
+      - ESSAY_LIFECYCLE_SERVICE_DATABASE_PATH=/data/essay_lifecycle/essay_lifecycle.db
+      - LOG_LEVEL=INFO
+    volumes:
+      - essay_lifecycle_data:/data/essay_lifecycle 
