--- a/pyproject.toml
+++ b/pyproject.toml
@@ -160,6 +160,7 @@ module = [
     "di", 
     "state_store", 
     "batch_command_handlers",
+    "batch_tracker",
     "api.*",
 ]
 ignore_missing_imports = true
