Refactor Essay Lifecycle Service to implement a clean architecture by introducing an `implementations/` directory for business logic. This update includes the addition of various components such as `content_client.py`, `event_publisher.py`, `metrics_collector.py`, `batch_command_handler_impl.py`, and `service_request_dispatcher.py`, each adhering to the Single Responsibility Principle. The `pyproject.toml` has been updated to include the new module structure. All changes have been verified to comply with project standards and pass all tests successfully.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -161,6 +161,7 @@ module = [
     "state_store", 
     "batch_command_handlers",
     "batch_tracker",
+    "implementations.*",
     "api.*",
 ]
 ignore_missing_imports = true
