Update pyproject.toml to include new modules for `api_models` and `kafka_consumer`, enhancing the structure of the Batch Orchestrator Service. Update FILE_SERVICE_IMP_PREPATORY_TASK.md to reflect the completion of the Batch Orchestrator Service modifications, including the implementation of the batch registration endpoint and Kafka consumer logic. Ensure all changes adhere to project standards and pass all tests successfully.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -163,6 +163,8 @@ module = [
     "batch_tracker",
     "implementations.*",
     "api.*",
+    "api_models",
+    "kafka_consumer",
 ]
 ignore_missing_imports = true
 
