WoofWoof Refactor Spell Checker Service to implement a clean architecture by introducing an `event_processor.py` for message processing, replacing the previous `event_router.py`. This update includes the addition of a new `protocol_implementations/` directory for protocol implementations, enhancing separation of concerns and adhering to the Single Responsibility Principle. The `pyproject.toml` has been updated to include the new module structure. All changes have been verified to comply with project standards and pass all tests successfully.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -156,12 +156,14 @@ module = [
     "worker_main", 
     "core_logic", 
     "event_router", 
+    "event_processor",
     "protocols", 
     "di", 
     "state_store", 
     "batch_command_handlers",
     "batch_tracker",
     "implementations.*",
+    "protocol_implementations.*",
     "api.*",
     "api_models",
     "kafka_consumer",
