WoofWoof Update `pyproject.toml` to include new modules for `metrics` and `startup_setup`, enhancing the structure of the Batch Orchestrator Service. Introduce a new `startup_setup.py` for service initialization and shutdown logic, and a `metrics.py` for Prometheus metrics middleware. Refactor `app.py` to utilize these new modules, improving separation of concerns and adhering to clean architecture principles. All changes have been verified to comply with project standards and pass all tests successfully.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -167,6 +167,8 @@ module = [
     "api.*",
     "api_models",
     "kafka_consumer",
+    "metrics",
+    "startup_setup",
 ]
 ignore_missing_imports = true
 
