Implement File Service as a new microservice within the HuleEdu ecosystem, responsible for handling file uploads, text extraction, and content ingestion coordination. Update docker-compose.yml to include the File Service with appropriate dependencies and environment configurations. Enhance .gitignore to exclude .env and .vscode files, and add relevant documentation in README.md to reflect the service's functionality and architecture. Ensure all changes comply with project standards and have been verified through testing.

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 .py[cod]
+.env
+.vscode/
 __pycache__/
 .mypy_cache/
 .pytest_cache/
@@ -6,7 +8,10 @@ __pycache__/
 .pdm-python
 .venv/
 **/.env
+.DS_Store
+.vscode/settings.json
 
 # temp_folders and temp_files used for testing or development
 cj_essay_assessment/
 /*.xml
+
