--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,12 +18,12 @@
     "editor.insertSpaces": true,
     "editor.trimAutoWhitespace": true,
     "files.exclude": {
+        ".venv": true,
         "**/__pycache__": true,
         "**/.mypy_cache": true,
-        "**/.pytest_cache": true,
-        "**/.ruff_cache": true,
         "**/.pdm-build": true,
-        ".venv": true
+        "**/.pytest_cache": true,
+        "**/.ruff_cache": true
     },
     "search.exclude": {
         "**/__pycache__": true,
