--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -151,6 +151,8 @@ services:
         condition: service_completed_successfully
       content_service:
         condition: service_started
+      file_service:
+        condition: service_started
     networks:
       - huleedu_internal_network
     ports:
@@ -179,6 +181,8 @@ services:
         condition: service_completed_successfully
       content_service:
         condition: service_started
+      file_service:
+        condition: service_started
     networks:
       - huleedu_internal_network
     environment:
@@ -188,4 +192,29 @@ services:
       - ESSAY_LIFECYCLE_SERVICE_DATABASE_PATH=/data/essay_lifecycle/essay_lifecycle.db
       - LOG_LEVEL=INFO
     volumes:
-      - essay_lifecycle_data:/data/essay_lifecycle 
+      - essay_lifecycle_data:/data/essay_lifecycle
+
+  file_service:
+    build:
+      context: .
+      dockerfile: services/file_service/Dockerfile
+    container_name: huleedu_file_service
+    restart: unless-stopped
+    depends_on:
+      kafka_topic_setup:
+        condition: service_completed_successfully
+      content_service:
+        condition: service_started
+    networks:
+      - huleedu_internal_network
+    ports:
+      - "7001:7001"
+      - "9094:9094"
+    environment:
+      - ENV_TYPE=docker
+      - FILE_SERVICE_KAFKA_BOOTSTRAP_SERVERS=kafka:9092
+      - FILE_SERVICE_CONTENT_SERVICE_URL=http://content_service:8000/v1/content
+      - FILE_SERVICE_HTTP_PORT=7001
+      - FILE_SERVICE_PROMETHEUS_PORT=9094
+      - FILE_SERVICE_HOST=0.0.0.0
+      - FILE_SERVICE_LOG_LEVEL=INFO 
