--- a/.github/workflows/walking-skeleton-smoke-test.yml
+++ b/.github/workflows/walking-skeleton-smoke-test.yml
@@ -18,6 +18,9 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
         
+      - name: Set up Docker Compose
+        uses: docker/setup-compose-action@v1
+        
       - name: Start HuleEdu Services
         run: |
           echo "Starting HuleEdu walking skeleton services..."
